--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -10,7 +10,7 @@ table {
 		th, td {
 			text-align: left;
 			font-size: 14px;
-			padding: 0 10px 15px 0;
+			padding: 0 12px 15px 0;
 
 			&:last-of-type {
 				padding-left: 0;
@@ -30,6 +30,9 @@ table {
 			&.input-text {
 				&.no-label {
 					margin-right: 10px;
+				}
+				&.row-item {
+					margin-right: 0;
 				}
 			}
 		}
