--- a/packages/ui-library/src/css/task.scss
+++ b/packages/ui-library/src/css/task.scss
@@ -18,7 +18,7 @@
 		}
 		.primary-instructions {
 			color: $color-elephant;
-			margin: -10px 0 27px -20px;
+			margin: -10px 0 10px -20px;
 			font-size: 15px;
 		}
 		textarea {
@@ -105,11 +105,13 @@
 		}
 	}
 	.sub-task-title {
-		font-size: 16px;
+		font-size: 15px;
 		line-height: 1em;
 		padding: 0 0 5px 0;
 		margin: 30px 0 25px 0;
+		color: $color-blue-grey;
 		border-bottom: 1px solid map-get($colors, 'stone');
+		font-family: $font-pn-bold;
 
 		.help-tooltip {
 			margin: 0 0 0 10px;
