--- a/packages/ui-library/src/css/details-page.scss
+++ b/packages/ui-library/src/css/details-page.scss
@@ -52,8 +52,8 @@
 		font-size: 16px;
 		color: gray;
 		border-bottom: 1px solid $color-dolphin;
-		margin: 0 0 15px 0 0;
-		padding: 0 0 15px 0 0;
+		margin: 0 0 15px 0;
+		padding: 0 0 15px 0;
 	}
 	.details-section {
 		padding: 30px 0 0 30px;
@@ -113,7 +113,6 @@
 		right: 5px;
 	}
 	.reject-btn, .approve-btn, .resend-btn {
-
 		&:hover {
 			@include opacity(0.7);
 		}
