--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -242,6 +242,9 @@
 		}
 	}
 	&.text-link {
+		.details-target {
+			display: inline-block;
+		}
 		.details-content {
 	    	margin-bottom: 20px;
 		}
