ID-3630 remove uppercase styling for all radio labels add new inline css style for when checkbox options are listed horizontally update checkbox demo
Change-Id: I83c748e251aab24573d9c1b4f2e2b8a5b943d514

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -308,8 +308,7 @@ label {
 				vertical-align: middle;
 			}
 		}
-		&.stacked {
-			display: block;
+		&.stacked, &.inline {
 			margin-bottom: 5px;
 			padding: 0 0 0 30px;
 			text-transform: none;
@@ -319,6 +318,9 @@ label {
 				text-transform: capitalize;
 				padding-top: 6px;
 			}
+		}
+		&.stacked {
+			display: block;
 		}
 	}
 	&.input-radio {
@@ -332,6 +334,7 @@ label {
 		display: inline-block;
 		padding: 0 0 0 32px;
 		margin: 0 20px 0 0;
+		text-transform: none;
 		cursor: pointer;
 
 		&.no-label {
@@ -340,7 +343,6 @@ label {
 		&.stacked {
 			display: block;
 			margin-bottom: 13px;
-			text-transform: none;
 
 			.label-text {
 				text-transform: capitalize;
