--- a/packages/ui-library/src/css/settings-sections.scss
+++ b/packages/ui-library/src/css/settings-sections.scss
@@ -228,36 +228,54 @@
 
 // ATTRIBUTE PREVIEW
 .preview {
-    padding: 5px;
-    background-color: $color-dolphin;
-    .title {
-        display: block;
-		padding: 0 0 5px 0;
-		margin: 0 0 25px 0;
-		color: $color-blue-grey;
-		border-bottom: 1px solid $color-stratus;
-		text-transform: uppercase;
-        text-align: center;
-		font-size: 14px;
-		line-height: 1em;
+    background-color: $color-timberwolf;
+    text-align: center;
+    margin-bottom: 20px;
+    .section {
+        padding: 0;
+        border-bottom: none;
+        .section-title {
+            color: $color-midnight;
+            padding: 10px;
+            display: block;
+    		text-transform: uppercase;
+            text-align: center;
+    		font-size: 14px;
+    		line-height: 1em;
+            .icon-dropdown-arrow {
+                background-image: none;
+                padding-right: 10px;
+                @include transition(none);
+                @include transform(none);
+            }
+        }
         &.active {
+            .section-title {
+                border-bottom: 1px solid $color-stratus;
+            }
             .icon-dropdown-arrow {
                 &:before {
+                    display: inline-block;
                     @include transition((top ease-out 0.4s, opacity ease-out 0.1s 0.3s));
-        			@include transform(rotate(180deg));
+                    @include transform(rotate(180deg));
                 }
             }
         }
-    }
-    .body {
-        padding-left: 30px;
-        .row-title {
-            text-transform: uppercase;
-            color: $color-midnight;
-            margin: 5px 0 10px;
-        }
-        .inactive {
-            @include opacity(0.6);
+        .section-container {
+            text-align: left;
+            margin: 0;
+            padding: 20px 0 0 40px;
+            input[type=text], input[type=password], textarea {
+                background-color: $color-white;
+            }
+            .row-title {
+                text-transform: uppercase;
+                color: $color-midnight;
+                margin: 5px 0 10px;
+            }
+            .inactive {
+                @include opacity(0.6);
+            }
         }
     }
 }
