--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -68,6 +68,8 @@
 		> label {
             padding: 0 20px 10px 0;
         	cursor: default;
+			font-size: 14px;
+			color: $color-midnight;
 
         	&.input-radio {
         		cursor: pointer;
